--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,39 @@
 .content{
     width: 100%;
+    background: #F7F7F7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     min-height: 700px;
+}
+
+.reciente-box{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 24px 0;
+    padding: 40px 0;
+    background: #fff;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+}
+
+#divChart{
+    margin: 40px 0;
+    width: 500px;
+}
+
+h3{
+    color: #0761BC;
+    font-size: 32px;
+}
+
+h2{
+    color: #1c1c1c;
+    font-size: 56px;
+}
+
+h4{
+    color: #767676;
 }
